--- a/purchase_request_department_approval/views/purchase_request_views.xml
+++ b/purchase_request_department_approval/views/purchase_request_views.xml
@@ -5,11 +5,11 @@
         <field name="model">purchase.request</field>
         <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='state']" position="replace">
-                <field name="state" widget="statusbar" statusbar_visible="draft,to_be_dept_approved,to_be_approved,approved,in_progress,done"/>
+
+            <xpath expr="//field[@name='state']" position="attributes">
+                <attribute name="statusbar_visible">draft,to_be_dept_approved,to_approve,approved,in_progress,done</attribute>
             </xpath>
 
-            <!-- 2. Add the new 'Department Approve' button in the header -->
             <xpath expr="//header" position="inside">
                 <button name="button_dept_approve"
                         type="object"
@@ -18,6 +18,7 @@
                         invisible="state != 'to_be_dept_approved'"
                         groups="purchase_request_department_approval.group_purchase_request_department_manager"/>
             </xpath>
+
         </field>
     </record>
 </odoo>
