--- a/Purchase_request_Hide_Cost_and_Remark/views/purchase_request_views.xml
+++ b/Purchase_request_Hide_Cost_and_Remark/views/purchase_request_views.xml
@@ -7,7 +7,7 @@
             <field name="model">purchase.request</field>
             <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
             <!-- 增加优先级，确保此视图修改在其他同级修改之后应用 -->
-            <field name="priority">99</field>
+            <field name="priority">200</field>
             <field name="arch" type="xml">
 
                 <!-- 1. 在产品行的“已采购数量”后添加“备注”字段 -->
@@ -23,6 +23,10 @@
                 <xpath expr="//field[@name='line_ids']/tree/field[@name='estimated_cost']" position="attributes">
                     <attribute name="groups">purchase_request.group_purchase_request_manager</attribute>
                 </xpath>
+                <!-- Hide Unit Price from non-managers on PR form lines tree -->
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='unit_price']" position="attributes">
+                    <attribute name="groups">purchase_request.group_purchase_request_manager</attribute>
+                </xpath>
 
                 <!-- 隐藏表单底部的“预计成本”总计金额 -->
                 <xpath expr="//field[@name='estimated_cost'][@nolabel='1']" position="attributes">
@@ -32,6 +36,15 @@
                 <!-- 隐藏“预计成本”总计的标签 -->
                 <xpath expr="//label[@for='estimated_cost']" position="attributes">
                     <attribute name="groups">purchase_request.group_purchase_request_manager</attribute>
+                </xpath>
+
+                <!-- Explicitly hide the Unit Price label for non-managers on PR line form -->
+                <xpath expr="//label[@for='unit_price']" position="attributes">
+                    <attribute name="groups">purchase_request.group_purchase_request_manager,base.group_system</attribute>
+                </xpath>
+                <!-- Fallback: if there is no label node, inject a manager-only label before field -->
+                <xpath expr="//group[@name='settings']//field[@name='unit_price']" position="before">
+                    <label for="unit_price" groups="purchase_request.group_purchase_request_manager,base.group_system"/>
                 </xpath>
 
                 <!-- 隐藏产品行的“Show Details”按钮 -->
@@ -51,6 +64,7 @@
             <field name="name">purchase.request.line.form.inherit.custom</field>
             <field name="model">purchase.request.line</field>
             <field name="inherit_id" ref="purchase_request.purchase_request_line_form"/>
+            <field name="priority">200</field>
             <field name="arch" type="xml">
                 <!-- 添加备注字段，仅采购经理可见 -->
                 <field name="purchased_qty" position="after">
@@ -58,6 +72,10 @@
                 </field>
                 <!-- 隐藏预计成本字段，仅采购经理可见 -->
                 <field name="estimated_cost" position="attributes">
+                    <attribute name="groups">purchase_request.group_purchase_request_manager</attribute>
+                </field>
+                <!-- Hide Unit Price from non-managers on PR line form -->
+                <field name="unit_price" position="attributes">
                     <attribute name="groups">purchase_request.group_purchase_request_manager</attribute>
                 </field>
             </field>
@@ -68,6 +86,7 @@
             <field name="name">purchase.request.line.tree.inherit.custom</field>
             <field name="model">purchase.request.line</field>
             <field name="inherit_id" ref="purchase_request.purchase_request_line_tree"/>
+            <field name="priority">200</field>
             <field name="arch" type="xml">
                 <!-- 添加备注字段，仅采购经理可见 -->
                 <field name="purchased_qty" position="after">
@@ -77,6 +96,7 @@
                 <field name="estimated_cost" position="attributes">
                     <attribute name="groups">purchase_request.group_purchase_request_manager</attribute>
                 </field>
+                <!-- Note: Unit Price is not present in the base list view; no change needed here. -->
             </field>
         </record>
         
@@ -88,6 +108,10 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='price_unit']" position="attributes">
                     <attribute name="groups">purchase_request.group_purchase_request_manager</attribute>
+                </xpath>
+                <!-- Hide Subtotal column and its header label for non-managers -->
+                <xpath expr="//field[@name='price_subtotal']" position="attributes">
+                    <attribute name="groups">purchase.group_purchase_manager,base.group_system</attribute>
                 </xpath>
             </field>
         </record>
